tests/this_type/lib/__snapshots__/jsfmt.spec.js.snap
exports[`test decl.js 1`] = `
"// The following declare classes use \`this\` types effectively to avoid type
// errors in ../lib_client.js. If support for \`this\` types in declare classes
// is disabled for perf reasons, these will produce warnings.

declare class LinkedList {
  next(): this;
}
declare class DoublyLinkedList extends LinkedList {
  prev(): this;
}

declare module \"mini-immutable\" {
  declare class Map<K,V> {
    set(key: K, value: V): this; // more precise than Map<K,V> (see below)
  }
  declare class OrderedMap<K,V> extends Map<K,V> {
    // inherits set method returning OrderedMap<K,V> instead of Map<K,V>
  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1348
        fromString(\", \").join(path.map(print, \"params\")),
                         ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1348:26)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1452:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;
